kube/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: taqueria-bonjour
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: taqueria-bonjour
  template:
    metadata:
      labels:
        app: taqueria-bonjour
    spec:
      containers:
      - name: frontend
        image: ghcr.io/paulkiernan/taqueria-bonjour-frontend:1.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
