kube/frontend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend
  labels:
    app: taqueria-bonjour
spec:
  selector:
    app: taqueria-bonjour
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
